2A/05_Projet_GL/src/test/deca/codegen/valid/SansObjet/37_mod.deca
// Description:
//    Programme avec modulo
// Resultats:
//    3
//    -3.00000e+00
//    OK
//
// Historique:
//    cree le 10/1/2024

{
    int x = 19%4;
    float y = -13 % 5;
    int w = ( 5 % 2 ) % 2;
    int z = 5%2;
    println(x);
    println(y);
    if (w==z){
        print("OK");
    }
}